--- a/leistungen.html
+++ b/leistungen.html
@@ -1313,6 +1313,7 @@
       <div class="betreuung-bild-item">
         <div class="bild-mit-overlay-container">
           <img src="/assets/KHK.png" alt="DMP für KHK" class="betreuung-bild">
+          <div class="info-rechteck">Mehr erfahren</div>
           <div class="plus-kreis"><span>+</span></div>
         </div>
         <p class="betreuung-bild-beschriftung">
@@ -1322,6 +1323,7 @@
       <div class="betreuung-bild-item">
         <div class="bild-mit-overlay-container">
           <img src="/assets/asthma.png" alt="DMP für Asthma" class="betreuung-bild">
+          <div class="info-rechteck">Mehr erfahren</div>
           <div class="plus-kreis"><span>+</span></div>
         </div>
         <p class="betreuung-bild-beschriftung">
@@ -1331,6 +1333,7 @@
       <div class="betreuung-bild-item">
         <div class="bild-mit-overlay-container">
           <img src="/assets/diabetes dmp.png" alt="DMP für Diabetes" class="betreuung-bild">
+          <div class="info-rechteck">Mehr erfahren</div>
           <div class="plus-kreis"><span>+</span></div>
         </div>
         <p class="betreuung-bild-beschriftung">
@@ -1401,13 +1404,41 @@
         line-height: 1; /* Verhindert zusätzlichen vertikalen Platz */
         box-shadow: 0px 2px 5px rgba(0,0,0,0.1); /* Optional: kleiner Schatten */
         transform: translate(25%, 25%); /* Verschiebt den Kreis um 1/4 seiner Größe nach außen */
-
+        z-index: 10; /* Stellt sicher, dass der Kreis über dem Info-Rechteck ist */
       }
       .plus-kreis span {
         display: inline-block; /* Stellt sicher, dass line-height korrekt angewendet wird */
         line-height: 50px; /* Setzt die Zeilenhöhe auf die Höhe des Kreises */
         position: relative; /* Ermöglicht feine Positionsanpassung */
         top: -2px; /* Verschiebt das Plus-Zeichen 2px nach oben */
+      }
+
+      .info-rechteck {
+        position: absolute;
+        bottom: 27.5px; /* Vertikal auf Höhe des Kreises */
+        left: 0;        /* Linke Kante des Rechtecks am linken Bildrand (finale Position) */
+        right: -20px;  /* Rechte Kante des Rechtecks an linker Kante des Kreises (finale Position) */
+        height: 50px; /* Gleiche Höhe wie der Kreis */
+        background-color: #6e370e; /* Akzentfarbe für Hintergrund */
+        color: #ffffff; /* Weißer Text */
+        border-radius: 25px; /* Starke Abrundung für Pillenform */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Poppins', sans-serif;
+        font-size: 16px;
+        font-weight: 500; /* Medium */
+        opacity: 0;
+        transform: translateX(50px); /* Startet weiter rechts verschoben, um mit rechter Kreiskante übereinzustimmen */
+        transition: transform 0.35s ease-out, opacity 0.3s ease-out; /* Sanfter Übergang für Position und Deckkraft */
+        z-index: 5; /* Unter dem Plus-Kreis, aber über dem Bild */
+        pointer-events: none; /* Verhindert Interaktion im versteckten Zustand */
+      }
+
+      .bild-mit-overlay-container:hover .info-rechteck { /* Geändert: Hover auf Container, nicht nur Kreis */
+        opacity: 1;
+        transform: translateX(0); /* Schiebt sich an die finale Position (linksbündig bis zur linken Kante des Kreises) */
+        pointer-events: auto;
       }
     `;
     document.head.appendChild(styleSheet);
