--- a/leistungen.html
+++ b/leistungen.html
@@ -1408,12 +1408,19 @@
         box-shadow: 0px 2px 5px rgba(0,0,0,0.1); /* Optional: kleiner Schatten */
         transform: translate(25%, 25%); /* Verschiebt den Kreis um 1/4 seiner Größe nach außen */
         z-index: 10; /* Stellt sicher, dass der Kreis über dem Info-Rechteck ist */
+        transition: transform 0.35s ease-out, border-color 0.35s ease-out, color 0.35s ease-out; /* Übergänge für Hover-Effekte */
       }
       .plus-kreis span {
         display: inline-block; /* Stellt sicher, dass line-height korrekt angewendet wird */
         line-height: 50px; /* Setzt die Zeilenhöhe auf die Höhe des Kreises */
         position: relative; /* Ermöglicht feine Positionsanpassung */
         top: -2px; /* Verschiebt das Plus-Zeichen 2px nach oben */
+      }
+      /* Hover-Effekt für den Plus-Kreis */
+      .plus-kreis:hover {
+        transform: translate(25%, 25%) rotate(180deg); /* Drehung beibehalten und Translation */
+        border-color: #6e370e; /* Randfarbe ändern */
+        color: #6e370e; /* Farbe des '+' Zeichens ändern (wird vom Span geerbt) */
       }
 
       .info-rechteck {
