--- a/leistungen.html
+++ b/leistungen.html
@@ -1488,7 +1488,7 @@
         display: flex;
         max-width: 950px; /* Etwas breiter */
         width: 90%;
-        max-height: 90vh; /* Höhe des Pop-ups erhöht */
+        height: 40vh; /* Höhe des Pop-ups weiter erhöht */
         box-shadow: 0 8px 25px rgba(0,0,0,0.2); /* Deutlicherer Schatten */
         position: relative;
         overflow-y: auto; 
