--- a/leistungen.html
+++ b/leistungen.html
@@ -1321,7 +1321,7 @@
           DMP für <span class="highlight-krankheit">KHK</span>
         </p>
       </div>
-      <div class="betreuung-bild-item" data-info-text="Das DMP Asthma hilft Ihnen, Ihre Erkrankung besser zu verstehen, Asthmaanfälle zu reduzieren und Ihre Lebensqualität durch gezielte Maßnahmen und Schulungen zu verbessern.">
+      <div class="betreuung-bild-item" data-info-text="Das strukturierte DMP für Asthma bronchiale unterstützt Patientinnen und Patienten dabei, ihre Atemwege besser zu verstehen, Auslöser gezielt zu vermeiden und Atemnot frühzeitig zu erkennen – durch regelmäßige Kontrollen, individuelle Beratung und festgelegte Behandlungsschritte.">
         <div class="bild-mit-overlay-container">
           <img src="/assets/asthma.png" alt="DMP für Asthma" class="betreuung-bild">
           <div class="neues-weisses-rechteck"></div>
@@ -1332,7 +1332,7 @@
           DMP für <span class="highlight-krankheit">Asthma</span>
         </p>
       </div>
-      <div class="betreuung-bild-item" data-info-text="Mit dem DMP Diabetes erhalten Sie eine umfassende Betreuung, um Blutzuckerwerte optimal einzustellen, Folgeerkrankungen vorzubeugen und ein aktives Leben mit Diabetes zu führen.">
+      <div class="betreuung-bild-item" data-info-text="Das Behandlungsprogramm für Typ-2-Diabetes unterstützt dabei, den Blutzuckerspiegel langfristig stabil zu halten, Folgeerkrankungen zu vermeiden und die Therapie individuell abzustimmen – durch kontinuierliche Untersuchungen, verständliche Information und persönliche Betreuung.">
         <div class="bild-mit-overlay-container">
           <img src="/assets/diabetes dmp.png" alt="DMP für Diabetes" class="betreuung-bild">
           <div class="neues-weisses-rechteck"></div>
@@ -1511,7 +1511,7 @@
       }
 
       .modal-image-container {
-        flex: 0 0 45%; 
+        flex: 0 0 35%; /* Reduziert den Platz für das Bild auf 35% */
         margin-right: 35px; /* Mehr Abstand zum Text */
         display: flex;
         align-items: center; 
@@ -1529,8 +1529,8 @@
       .modal-text-container {
         flex: 1; 
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start; 
+        flex-direction: column; /* Behält die vertikale Anordnung von Titel und Text bei */
+        justify-content: center; /* Zentriert den Inhalt vertikal */
       }
 
       .modal-text-container h4 { /* Titel im Modal */
