--- a/leistungen.html
+++ b/leistungen.html
@@ -1219,7 +1219,7 @@
             </tbody>
           </table>
 
-          <div class="akut-sprechstd-titel">Akute Sprechstunde</div>
+          <div class="akut-sprechstd-titel">Akute Sprechstunde:</div>
           <div class="akut-sprechstd-zeiten-container">
             <div class="akut-zeiten-zeile">
               <span class="tage">Mo, Di, Fr:</span>
