--- a/leistungen.html
+++ b/leistungen.html
@@ -704,6 +704,13 @@
       margin: 0 auto 120px auto; /* Beibehaltung der Zentrierung für die Linie */
     }
 
+    .leistungen-section .section-divider {
+      width: 80%;
+      height: 1px;
+      background-color: #6e370e;
+      margin: 0 auto 120px auto; /* Beibehaltung der Zentrierung für die Linie */
+    }
+
     .werte-section .sub-heading-container {
       display: flex;
       /* justify-content: center; wird entfernt für Linksbündigkeit */
