--- a/leistungen.html
+++ b/leistungen.html
@@ -1752,7 +1752,7 @@
       /* Slideshow für Persönliche Begleitung */
       .slideshow-container {
         position: relative;
-        max-width: 1100px; /* Anpassbare Breite */
+        max-width: 960px; /* Anpassbare Breite - Reduziert */
         margin: 70px auto 40px auto; /* Abstand oben/unten und zentriert */
         overflow: hidden; /* Wichtig, um nur einen Slide anzuzeigen */
         border-radius: 8px; 
