--- a/leistungen.html
+++ b/leistungen.html
@@ -1756,6 +1756,7 @@
         margin: 70px auto 40px auto; /* Abstand oben/unten und zentriert */
         overflow: hidden; /* Wichtig, um nur einen Slide anzuzeigen */
         border-radius: 8px; 
+        padding: 0 56px; /* Horizontalen Padding für die Pfeile hinzugefügt */
         /* box-shadow: 0 4px 15px rgba(0,0,0,0.1); */
       }
 
@@ -1819,8 +1820,8 @@
         top: 50%;
         transform: translateY(-50%);
         background-color: rgba(255, 255, 255, 0.85); 
-        color: #0c0c0c; 
-        border: 1px solid #e0e0e0;
+        color: #6e370e; 
+        border: 1px solid #6e370e;
         border-radius: 50%; 
         width: 45px;
         height: 45px;
@@ -1839,15 +1840,16 @@
         border-color: #6e370e;
       }
       .slide-nav.prev {
-        left: 25px;
+        left: 15px; /* Positioniert den Pfeil 15px vom neuen äußeren Rand des Containers */
       }
       .slide-nav.next {
-        right: 25px;
+        right: 15px; /* Positioniert den Pfeil 15px vom neuen äußeren Rand des Containers */
       }
 
       .slide-dots {
         position: absolute;
         bottom: 25px;
+        top: 460px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -1856,9 +1858,9 @@
       }
 
       .slide-dots .dot {
-        width: 12px;
-        height: 12px;
-        background-color: #0c0c0c; 
+        width: 15px;
+        height: 15px;
+        background-color: #6e370e; 
         border-radius: 50%;
         cursor: pointer;
         opacity: 0.5; /* Inaktive Punkte */
