--- a/leistungen.html
+++ b/leistungen.html
@@ -854,6 +854,14 @@
       border-radius: 0; /* Keine Abrundung */
       border: none; /* Kein Rand */
       cursor: pointer;
+      transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Sanfter Übergang */
+    }
+
+    .footer-new-button:hover {
+      background-color: #6e370e;
+      color: #ffffff;
+      border: 1px solid #ffffff;
+      padding: 11px 79px; /* Padding anpassen, um die Größe durch den Rand beizubehalten */
     }
 
     .footer-logo-wrapper {
@@ -2136,5 +2144,59 @@
       </div>
     </div>
   </div>
+
+  <footer class="main-footer">
+    <div class="footer-top-left-content">
+      <div class="footer-new-title">Ihre Gesundheit.<br>Unser Auftrag.</div>
+      <a href="kontakt.html" class="footer-new-button">Kontakt</a>
+    </div>
+    <div class="footer-logo-wrapper">
+      <div class="footer-logo">
+        <a class="logo-link"> <!-- href entfernt, um Weiterleitung zu verhindern -->
+          <div class="logo-text-container">
+            <div class="bazara-style">BAZARA</div>
+            <div class="safia-style">safia</div>
+          </div>
+          <div class="subtitle-style">Hausarztpraxis</div>
+        </a>
+      </div>
+    </div>
+    <div class="footer-bottom-wrapper">
+      <div class="footer-bottom-left-text">
+        <span class="hausarzt-color">Hausarztpraxis</span><br>
+        <span class="bazara-color">Bazara</span>
+      </div>
+      <div class="footer-contact-hours-container">
+        <div class="footer-contact-column">
+          <p>Kontakt:</p>
+          <p>Alte Hellersdorfer Str.</p>
+          <p>12629 Berlin</p>
+          <p>Telefon: +49 (0) 30 9939 168</p>
+          <p>Telefax: +49 (0) 30 9940 2335</p>
+        </div>
+        <div class="footer-hours-column">
+          <p class="hours-title">Öffnungszeiten:</p>
+          <div class="footer-hours-details">
+            <div class="footer-hours-days">
+              <p>Mo, Di, Fr:</p>
+              <p>Mo:</p>
+              <p>Do:</p>
+              <p>Mi:</p>
+            </div>
+            <div class="footer-hours-times">
+              <p>8:30 - 12 Uhr</p>
+              <p>15:00 - 18 Uhr</p>
+              <p>13:00 - 18 Uhr</p>
+              <p>nach Vereinbarung</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom-right-links">
+        <a href="impressum.html">Impressum</a>
+        <a href="datenschutzerklärung.html">Datenschutzerklärung</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
