--- a/leistungen.html
+++ b/leistungen.html
@@ -1174,7 +1174,7 @@
 
   <nav class="main-nav">
     <div class="menu-logo">
-      <a href="index.html" class="logo-link">
+      <a href="/" class="logo-link">
         <div class="logo-text-container">
           <div class="bazara-style">BAZARA</div>
           <div class="safia-style">safia</div>
@@ -1183,10 +1183,10 @@
       </a>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="leistungen.html">Leistungen</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/leistungen">Leistungen</a></li>
+      <li><a href="/faq">FAQ</a></li>
+      <li><a href="/kontakt">Kontakt</a></li>
     </ul>
   </nav>
 
@@ -2148,7 +2148,7 @@
   <footer class="main-footer">
     <div class="footer-top-left-content">
       <div class="footer-new-title">Ihre Gesundheit.<br>Unser Auftrag.</div>
-      <a href="kontakt.html" class="footer-new-button">Kontakt</a>
+      <a href="/kontakt" class="footer-new-button">Kontakt</a>
     </div>
     <div class="footer-logo-wrapper">
       <div class="footer-logo">
@@ -2193,8 +2193,8 @@
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="impressum.html">Impressum</a>
-        <a href="datenschutzerklärung.html">Datenschutzerklärung</a>
+        <a href="/impressum">Impressum</a>
+        <a href="/datenschutzerklärung">Datenschutzerklärung</a>
       </div>
     </div>
   </footer>
