--- a/leistungen.html
+++ b/leistungen.html
@@ -1513,6 +1513,7 @@
         transform: translate(25%, 25%); /* Verschiebt den Kreis um 1/4 seiner Größe nach außen */
         z-index: 10; /* Stellt sicher, dass der Kreis über dem Info-Rechteck ist */
         transition: transform 0.35s ease-out, border-color 0.35s ease-out, color 0.35s ease-out; /* Übergänge für Hover-Effekte */
+        cursor: pointer;
       }
       .plus-kreis span {
         display: inline-block; /* Stellt sicher, dass line-height korrekt angewendet wird */
