--- a/faq.html
+++ b/faq.html
@@ -283,13 +283,13 @@
 
     .quote-content::before { 
       content: "“"; 
-      top: -70px; /* Weiter nach oben und außen */
-      left: -75px; /* Weiter nach links und außen */
+      top: -30px; /* Ein bisschen weiter nach unten verschoben */
+      left: -85px; /* Weiter nach links und außen */
     }
     .quote-content::after { 
       content: "”"; 
       bottom: -120px; /* Weiter nach unten und außen */
-      right: -75px;  /* Weiter nach rechts und außen */
+      right: -85px;  /* Weiter nach rechts und außen */
     }
 
   </style>
